# chainlit

./: .editorconfig  .env.example  .eslintrc  .gitignore  .npmrc  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DYNAMIC_CONFIGURATION.md  HANDOVER_SUMMARY.md  INLINE_WIDGETS_IMPLEMENTATION.md  LICENSE  PRIVACY_POLICY.md  PR_DESCRIPTION.md  README.md  RELEASE_SUMMARY.md  RELENG.md  SECURITY.md  SQLITE_INTEGRATION.md  TRANSLATION_AUDIT.md  TRANSLATION_UPDATES_SUMMARY.md  WARP.md  bash.exe.stackdump  commitlint.config.ts  copilot-instructions.md  cypress.config.ts  dynamic_config_example.py  eslint.config.mjs  example_google_maps.py  google_maps_example.py  google_maps_helper.py  input_widgets_bar_documentation.md  lefthook.yml  lint-staged.config.js  package-lock.json  package.json  pnpm-lock.yaml  (+10 more)
backend/: .envrc  .python-version  README.md  build.py  hello.py  pyproject.toml
backend/agent/: __init__.py  graph.py  requirements.txt  state.py
backend/agent/tools/: __init__.py  code_executor_tool.py  code_generator_tool.py  dwg_converter_tool.py  dxf_descriptor.py  geometry_description_tool.py  s3_utils.py  semantic_search_tool.py  vtk_frame_taker.py
backend/alembic/versions/: 0001_create_tables.py
backend/chainlit/: __init__.py  __main__.py  _utils.py  action.py  assistant.py  assistant_settings.py  auth.py  auth_ext.py  cache.py  callbacks.py  chat_context.py  chat_settings.py  checkbox_group.py  config.py  context.py  copilot.py  custom_widgets.py  echo_close.py  element.py  emitter.py  generation.py  hello.py  input_bar.py  input_widget.py  logger.py  markdown.py  mcp.py  mcp_connection.py  message.py  mode.py  oauth_providers.py  prompt.py  secret.py  server.py  session.py  sidebar.py  slack_websocket_test.py  socket.py  sql_alchemy.py  step.py  (+9 more)
backend/chainlit/auth/: __init__.py  cookie.py  jwt.py
backend/chainlit/cli/: __init__.py  auth.py  deploy.py
backend/chainlit/client/: acl.py  base.py  cloud.py  local.py  utils.py
backend/chainlit/data/: __init__.py  acl.py  base.py  chainlit.py  chainlit_data_layer.py  dynamodb.py  literalai.py  models.py  mongodb.py  mongodb_api.py  mysql_sqlalchemy_data_layer.py  postgres.py  sql_alchemy.py  sql_alchemy_orm.py  sql_data_layer.py  sql_model.py  sqlite.py  sqlite_schema.sql  storage_clients.py  utils.py
backend/chainlit/db/: __init__.py
backend/chainlit/discord/: __init__.py  app.py
backend/chainlit/haystack/: __init__.py  callbacks.py
backend/chainlit/langchain/: __init__.py  callbacks.py
backend/chainlit/langflow/: __init__.py
backend/chainlit/litellm/: __init__.py
backend/chainlit/llama_index/: __init__.py  callbacks.py
backend/chainlit/mistralai/: __init__.py
backend/chainlit/models/: __init__.py  element.py  feedback.py  step.py  thread.py  user.py
backend/chainlit/oauth/: auth0_oauth_provider.py  aws_cognito_oauth_provider.py  azure_ad_hubrid_oauth_provider.py  azure_ad_oauth_provider.py  descope_oauth_provider.py  github.py  gitlab_oauth_provider.py  google.py  okta_oauth_provider.py  providers.py
backend/chainlit/oauth_providers/: auth0_oauth_provider.py  aws_cognito_oauth_provider.py  azure_ad_hubrid_oauth_provider.py  azure_ad_oauth_provider.py  descope_oauth_provider.py  github.py  gitlab_oauth_provider.py  google.py  oauth_provider.py  okta_oauth_provider.py  providers.py
backend/chainlit/openai/: __init__.py
backend/chainlit/playground/: __init__.py  config.py  provider.py
backend/chainlit/sample/: starters_demo.py
backend/chainlit/semantic_kernel/: __init__.py
backend/chainlit/slack/: __init__.py  app.py
backend/chainlit/teams/: __init__.py  app.py
backend/chainlit/translations/: ar-SA.json  ar.json  bn.json  da-DK.json  de-DE.json  de.json  el-GR.json  en-US.json  es.json  fr-FR.json  fr.json  gu.json  he-IL.json  hi.json  it.json  ja.json  kn.json  ko.json  ml.json  mr.json  nl-NL.json  nl.json  pt-BR.json  pt-PT.json  ru.json  ta.json  te.json  zh-CN.json  zh-TW.json
backend/chainlit/types/: __init__.py  step.py
backend/tests/: conftest.py  test_action.py  test_auth.py  test_cache.py  test_callbacks.py  test_chat_context.py  test_chat_settings.py  test_config.py  test_config_slack.py  test_context.py  test_custom_widgets.py  test_dynamic_config.py  test_element.py  test_emitter.py  test_feedback_context.py  test_input_widget.py  test_integration_workflow.py  test_llm_picker.py  test_markdown.py  test_mcp.py  test_mcp_auto_connection.py  test_mcp_config.py  test_message.py  test_modes.py  test_oauth_providers.py  test_server.py  test_session.py  test_sidebar.py  test_slack_socket_mode.py  test_socket.py  test_socket_profile_switch.py  test_step.py  test_translations.py  test_types.py  test_user_session.py  test_utils.py
backend/tests/auth/: test_cookie.py
backend/tests/data/: conftest.py  test_chainlit_data_layer.py  test_get_data_layer.py  test_literalai.py  test_s3_storage_client.py  test_sql_alchemy.py  test_sql_alchemy_orm.py
backend/tests/langchain/: README.md  test_async_callback.py  test_chain_types.py  test_sync_callback.py
backend/tests/litellm/: test_litellm.py
backend/tests/llama_index/: test_callbacks.py
backend/tests/slack/: test_slack_app.py
backend/tests/test_db/: builder.py  conftest.py  test_db.py
src/: README.md  ci-requirements.txt  pyproject.toml  setup.py
src/.chainlit/: config.toml
src/chainlit/: LICENSE  __init__.py  __main__.py  action.py  auth.py  cache.py  chat_settings.py  cli.py  client.py  config.py  context.py  db.py  element.py  emitter.py  env.py  hello.py  input_widget.py  logger.py  markdown.py  message.py  prompt.py  pyproject.toml  schema.prisma  sdk.py  server.py  session.py  socket.py  sync.py  tasklist.py  telemetry.py  types.py  uihandler.py  user_session.py  utils.py  watch.py
src/chainlit/chainlit/: action.py  chat_settings.py  session.py  sync.py  telemetry.py  types.py  (+1 more)
src/frontend/: babel.config.cjs  index.html  vite.config.ts
src/rush/: __init__.py  __main__.py  cli.py  config.py  inject.py  monkey.py  sdk.py  server.py  uihandler.py
src/tests/: test_message.py
(+1942 files in other folders)
