[project]
name = "chainlit"
version = "2.4.0"
description = "Build Conversational AI."
authors = [
    { name = "Willy Douhard" },
    { name = "Dan Andre Constantini" },
]
requires-python = ">=3.10,<4.0.0"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "LLM",
    "Agents",
    "MCP",
    "gen ai",
    "chat ui",
    "chatbot ui",
    "openai",
    "copilot",
    "langchain",
    "conversational ai",
]
classifiers = [
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Chat",
    "Programming Language :: JavaScript",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Web Environment",
]
dependencies = [
    "httpx>=0.23.0",
    "literalai==0.1.103",
    "dataclasses_json>=0.6.7,<0.7",
    "fastapi>=0.115.3,<0.116",
    "starlette>=0.41.2,<0.42",
    "uvicorn>=0.25.0",
    "python-socketio>=5.11.0,<6",
    "aiofiles>=23.1.0,<25.0.0",
    "syncer>=2.0.3,<3",
    "asyncer>=0.0.7,<0.0.8",
    "mcp>=1.3.0,<2",
    "nest-asyncio>=1.6.0,<2",
    "click>=8.1.3,<9",
    "tomli>=2.0.1,<3",
    "pydantic>=2.7.2,<3",
    "python-dotenv>=1.0.0,<2",
    "uptrace>=1.29.0,<2",
    "watchfiles>=0.20.0,<0.21",
    "filetype>=1.2.0,<2",
    "lazify>=0.4.0,<0.5",
    "packaging>=23.1",
    "python-multipart>=0.0.18,<0.0.19",
    "pyjwt>=2.8.0,<3",
]

[project.urls]
Homepage = "https://chainlit.io/"
Repository = "https://github.com/Chainlit/chainlit"
Documentation = "https://docs.chainlit.io/"

[project.scripts]
chainlit = "chainlit.cli:cli"

[dependency-groups]
tests = [
    "pytest>=8.3.2,<9",
    "pytest-asyncio>=0.23.8,<0.24",
    "pytest-cov>=5.0.0,<6",
    "openai>=1.11.1,<2",
    "langchain>=0.2.4,<0.3",
    "llama-index>=0.10.45,<0.11",
    "tenacity>=8.4.1,<9",
    "transformers~=4.38",
    "matplotlib>=3.7.1,<4",
    "plotly>=5.18.0,<6",
    "slack_bolt>=1.18.1,<2",
    "discord>=2.3.2,<3",
    "botbuilder-core>=4.15.0,<5",
    "aiosqlite>=0.20.0,<0.21",
    "pandas>=2.2.2,<3",
    "moto>=5.0.14,<6",
]
dev = ["ruff>=0.9.0,<0.10"]
mypy = [
    "mypy~=1.13",
    "types-requests>=2.31.0.2,<3",
    "types-aiofiles>=23.1.0.5,<24",
    "mypy-boto3-dynamodb>=1.34.113,<2",
    "pandas-stubs>=2.2.2,<3 ; python_version >= '3.9'",
]
custom-data = [
    "asyncpg>=0.29.0,<0.30",
    "SQLAlchemy>=2.0.28,<3",
    "boto3>=1.34.73,<2",
    "azure-identity>=1.14.1,<2",
    "azure-storage-file-datalake>=12.14.0,<13",
    "azure-storage-blob>=12.24.0,<13",
    "google-cloud-storage>=2.19.0,<3",
]

[tool.uv]
default-groups = [
    "tests",
    "dev",
    "mypy",
    "custom-data",
]

[tool.hatch.build.targets.sdist]
include = [
    "chainlit/frontend/dist/**/*",
    "chainlit/copilot/dist/**/*",
]
exclude = [
    "chainlit/frontend/**/*",
    "chainlit/copilot/**/**/",
]

[tool.hatch.build.targets.wheel]
include = [
    "chainlit/frontend/dist/**/*",
    "chainlit/copilot/dist/**/*",
]
exclude = [
    "chainlit/frontend/**/*",
    "chainlit/copilot/**/**/",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
    "boto3.dynamodb.types",
    "botbuilder.*",
    "filetype",
    "langflow",
    "lazify",
    "plotly",
    "nest_asyncio",
    "socketio.*",
    "uptrace",
    "syncer",
    "azure.storage.filedatalake",
    "google-cloud-storage"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "LOG", "UP", "T10", "ISC", "ICN", "LOG", "G", "PIE", "PT", "Q", "RSE", "FURB", "RUF"]
ignore = ["E712", "E501", "UP006", "UP035","PIE790", "RUF005", "RUF006", "RUF012", "ISC001"]

[tool.ruff.lint.isort]
combine-as-imports = true
