[tool.poetry]
name = "chainlit"
version = "0.4.0"
keywords = ['LLM', 'Agents', 'gen ai', 'chat ui', 'chatbot ui', 'langchain']
description = "A faster way to build chatbot UIs."
authors = ["Chainlit"]
license = "Apache-2.0 license"
repository = "https://github.com/Chainlit/chainlit"
readme = "README.md"
exclude = [
    "**/frontend/**/*",
]
include = [
    "**/frontend/dist/**/*",
]

[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
chainlit = 'chainlit.cli:cli'

[tool.poetry.dependencies]
python = "^3.8"
dataclasses_json = "^0.5.7"
uvicorn = "^0.22.0"
nest-asyncio = "^1.5.6"
fastapi = "^0.96.0"
fastapi-socketio = "^0.0.10"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"
syncer = "^2.0.3"
asyncer = "^0.0.2"
click = "^8.1.3"
openai = "^0.27.7"
tomli = "^2.0.1"
pydantic = "^1.10.8"
python-graphql-client = "^0.4.3"
python-dotenv = "^1.0.0"
auth0-python = "^4.1.1"
uptrace = "^1.18.0"
watchfiles="^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
