[tool.poetry]
name = "chainlit"
version = "0.6.1"
keywords = ['LLM', 'Agents', 'gen ai', 'chat ui', 'chatbot ui', 'langchain']
description = "A faster way to build chatbot UIs."
authors = ["Chainlit"]
license = "Apache-2.0 license"
repository = "https://github.com/Chainlit/chainlit"
readme = "README.md"
exclude = [
    "**/frontend/**/*",
]
include = [
    "**/frontend/dist/**/*",
]

[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
chainlit = 'chainlit.cli:cli'

[tool.poetry.dependencies]
python = "^3.8.1"
dataclasses_json = "^0.5.7"
uvicorn = "^0.22.0"
fastapi = "^0.97.0"
fastapi-socketio = "^0.0.10"
aiohttp = "^3.8.4"
aiofiles = "^23.1.0"
syncer = "^2.0.3"
asyncer = "^0.0.2"
nest-asyncio = "^1.5.6"
click = "^8.1.3"
openai = "^0.27.7"
tomli = "^2.0.1"
pydantic = "^1.10.8"
python-graphql-client = "^0.4.3"
python-dotenv = "^1.0.0"
auth0-python = "^4.4.0"
uptrace = "^1.18.0"
watchfiles="^0.19.0"
prisma="^0.9.0"
filetype = "^1.2.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
langchain = "^0.0.229"
llama_index = "^0.7.4"
transformers = "^4.30.1"
responses = "0.23.1"
aioresponses = "0.7.4"
matplotlib = "3.7.1"
farm-haystack = "^1.18.0"

[tool.poetry.group.mypy]
optional = true

[tool.poetry.group.mypy.dependencies]
mypy = "^1.4.1"
types-requests = "^2.31.0.2"
types-aiofiles = "^23.1.0.5"

[tool.mypy]
python_version = "3.8"

[[tool.mypy.overrides]]
module = [
    "fastapi_socketio",
    "filetype",
    "haystack.*",
    "langflow",
    "matplotlib.*",  # remove when 3.8.0 is out, it should export types
    "nest_asyncio",
    "prisma.*",
    "python_graphql_client",
    "socketio.*",
    "uptrace",
    "syncer",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
